Reconfig gulp for build

--- a/src/about.html
+++ b/src/about.html
@@ -46,10 +46,7 @@
 
   <main class="">
     
-<h1>INDEX PAGE</h1>
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque commodo nec turpis nec cursus. Sed vestibulum ligula arcu, sit amet pellentesque lorem bibendum vitae. Integer eget lectus nibh. Aliquam vulputate fermentum neque eu facilisis. Aenean faucibus urna erat, in dictum elit mollis et. Sed dictum pellentesque varius. Proin gravida accumsan mauris, eget vestibulum sapien cursus eget. Maecenas lobortis quam et dolor feugiat interdum. 
-
+<h1>ABOUT US</h1>
 
   </main>
 
