Update gulp file config

--- a/src/index.copy.html
+++ b/src/index.copy.html
@@ -36,7 +36,7 @@
   <!--<![endif]-->
 
 </head>
-<body class="home-page  ">
+<body class="  ">
   <header role="mainheader" class="">
   <div class="oe-header">
 </div>
@@ -46,7 +46,7 @@
 
   <main class="">
     
-
+    
   </main>
 
   <footer>
